# openproject_api_mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/openproject_mcp/: __init__.py  client.py  config.py  server.py
