[project]
name = "openproject-mcp"
version = "0.1.0"
description = "MCP server for OpenProject integration with AI IDEs like Cursor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
openproject-mcp = "openproject_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/openproject_mcp"]

[tool.hatch.build.targets.wheel]
packages = ["src/openproject_mcp"]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

